--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
-    "lint": "bun run lint:biome && bun run lint:action",
+    "lint": "bun run lint:biome && bun run lint:action && bun run lint:knip",
     "lint:fix": "bun run lint:biome:fix && bun run lint:action",
     "lint:biome": "biome check",
     "lint:biome:fix": "biome check --write",
     "lint:action": "node-actionlint",
+    "lint:knip": "knip",
     "check": "biome check"
   },
   "dependencies": {
-    "@t3-oss/env-core": "^0.12.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-query": "^5.66.5",
     "@tanstack/react-query-devtools": "^5.66.5",
@@ -51,6 +51,7 @@
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
+    "knip": "^5.59.1",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
     "vitest": "^3.0.5",
