--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "serve": "vite preview",
     "test": "vitest run",
     "format": "biome format",
-    "lint": "bun run lint:biome && bun run lint:action && bun run lint:knip",
+    "lint": "bun run lint:biome && bun run lint:action && bun run lint:knip && bun run lint:types",
     "lint:fix": "bun run lint:biome:fix && bun run lint:action",
+    "lint:types": "tsgo --noEmit",
     "lint:biome": "biome check",
     "lint:biome:fix": "biome check --write",
     "lint:action": "node-actionlint",
@@ -49,6 +50,7 @@
     "@tktco/node-actionlint": "^1.5.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@typescript/native-preview": "^7.0.0-dev.20250603.1",
     "@vitejs/plugin-react": "^4.3.4",
     "jsdom": "^26.0.0",
     "knip": "^5.59.1",
