feat: update testing setup and add new tests
- Updated package.json to use npx for vitest commands and added coverage options.
- Added tests for EmptyState component to verify rendering and interaction.
- Created tests for MeetingTimer component to check time display and styling.
- Implemented tests for LanguageContext to ensure proper language handling and translation.
- Added tests for ThemeContext to validate theme management and persistence.
- Introduced utility tests for cn function to ensure correct class name merging.
- Set up test environment with vitest configuration and localStorage mock.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "start": "vinxi start",
     "build": "vinxi build",
     "serve": "vite preview",
-    "test": "vitest run",
+    "test": "npx vitest run",
+    "test:watch": "npx vitest",
+    "test:ui": "npx vitest --ui",
+    "test:coverage": "npx vitest run --coverage",
     "format": "biome format",
     "lint": "bun run lint:biome && bun run lint:action && bun run lint:knip && bun run lint:types",
     "lint:fix": "bun run lint:biome:fix && bun run lint:action",
@@ -46,17 +49,20 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/react": "^16.2.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@tktco/node-actionlint": "^1.5.2",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@typescript/native-preview": "^7.0.0-dev.20250603.1",
-    "@vitejs/plugin-react": "^4.3.4",
-    "jsdom": "^26.0.0",
+    "@vitejs/plugin-react": "^4.5.1",
+    "@vitest/ui": "^3.2.1",
+    "jsdom": "^26.1.0",
     "knip": "^5.59.1",
     "typescript": "^5.7.2",
     "vite": "^6.1.0",
-    "vitest": "^3.0.5",
+    "vitest": "^3.2.1",
     "web-vitals": "^4.2.4"
   }
 }
