fix: remove redundant npx prefix from test scripts in package.json

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "start": "vinxi start",
     "build": "vinxi build",
     "serve": "vite preview",
-    "test": "npx vitest run",
-    "test:watch": "npx vitest",
-    "test:ui": "npx vitest --ui",
-    "test:coverage": "npx vitest run --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "format": "biome format",
     "lint": "bun run lint:biome && bun run lint:action && bun run lint:knip && bun run lint:types",
     "lint:fix": "bun run lint:biome:fix && bun run lint:action",
